# mindhive-ai-chatbot-assessment

./: .dockerignore  .env.example  AGENTIC_PLANNING_WRITEUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.light  ERROR_HANDLING_SECURITY_STRATEGY.md  INTENT_PARSING_APPROACH.md  RAG_TRANSCRIPTS.md  README.md  RENDER_DEPLOYMENT.md  TOOL_CALLING_TRANSCRIPTS.md  UNHAPPY_FLOWS_DEMONSTRATION.md  USAGE_EXAMPLES.md  conversation_memory.db  enhanced_frontend.html  main.py  main_light.py  pyproject.toml  pytest.ini  quick_demo.py  render.yaml  requirements-minimal.txt  requirements-render.txt  requirements.txt  run_demo.py  simple_demo.py  start_server.sh  test_local.py  test_unhappy_flows_manual.py
app/: config.py
app/api/: agentic_chat.py  chat.py  dspy_calculator.py  products.py  rag_endpoints.py  restaurants.py
app/core/: action_executor.py  memory_manager.py  planner.py
app/data/: zus_outlets.json  zus_products.json
app/models/: conversation.py
app/rag/: product_vectorstore.py  text2sql_system.py
app/services/: agentic_chatbot_service.py  chatbot_service.py
app/tests/: test_agentic_planning.py  test_api_endpoints.py  test_conversation_flows.py  test_dspy_calculator.py  test_rag_endpoints.py  test_security_scenarios.py  test_unhappy_flows.py
app/tools/: dspy_calculator.py
data/: zus_outlets.db
data/vector_store/: documents.pkl
frontend/: index.html
