[tool.poetry]
name = "mindhive-chatbot"
version = "0.1.0"
description = "AI Chatbot for Mindhive Technical Assessment"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
openai = "^1.3.0"
chromadb = "^0.4.18"
sqlalchemy = "^2.0.23"
sqlite3 = "^3.40.0"
pandas = "^2.1.3"
numpy = "^1.25.2"
sentence-transformers = "^2.2.2"
httpx = "^0.25.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"